go-app/templates/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  namespace: preprod
  labels:
    app: go-web-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web-app
  type: NodePort
